--- a/package.json
+++ b/package.json
@@ -1,34 +1,29 @@
 {
-  "name": "rescript-nextjs-template",
-  "version": "1.0.0",
-  "author": "Patrick Stapfer <ryyppy@users.noreply.github.com>",
+  "name": "rescript-nextjs-scroll-animation",
+  "author": "Rui Monteiro <figo.monteiro@gmail.com>",
   "license": "Apache License 2.0",
-  "dependencies": {
-    "gentype": "^3.41.0",
-    "next": "^10.0.4",
-    "next-transpile-modules": "^4.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "reason-react": "^0.9.1",
-    "request": "^2.88.0"
-  },
+  "private": true,
+  "version": "0.0.0",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "next",
-    "debug": "NODE_OPTIONS='--inspect' next",
-    "build": "bsb -clean-world -make-world && next build",
-    "now-build": "bsb -clean-world -make-world && next build",
-    "export": "next export",
-    "start": "next start -p $PORT",
-    "res:build": "bsb -make-world",
-    "res:clean": "bsb -clean-world",
-    "res:start": "bsb -make-world -w"
+    "dev": "yarn workspace @apps/nextjs-scroll-animation dev",
+    "debug": "yarn workspace @apps/nextjs-scroll-animation debug",
+    "build": "yarn workspace @apps/nextjs-scroll-animation build",
+    "export": "yarn workspace @apps/nextjs-scroll-animation export",
+    "start": "yarn workspace @apps/nextjs-scroll-animation start",
+    "res:build": "yarn workspace @apps/nextjs-scroll-animation res:build",
+    "res:clean": "yarn workspace @apps/nextjs-scroll-animation res:clean",
+    "res:start": "yarn workspace @apps/nextjs-scroll-animation res:start"
   },
   "devDependencies": {
-    "autoprefixer": "^10.1.0",
-    "bs-platform": "8.4.2",
-    "cssnano": "^4.1.10",
-    "postcss": "^8.2.1",
-    "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.0.2"
+    "@next/bundle-analyzer": "^10.0.7",
+    "@weco/next-plugin-transpile-modules": "^2.2.1",
+    "bs-platform": "^9.0.1",
+    "gentype": "^3.41.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.7.0"
   }
 }
