--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -14,6 +14,7 @@
     "bs-css-emotion": "^2.4.0",
     "bs-webapi": "^0.19.1",
     "next": "^10.0.7",
+    "next-transpile-modules": "^6.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-transition-group": "^4.4.1",
