--- a/packages/rescript-bindings/bsconfig.json
+++ b/packages/rescript-bindings/bsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://raw.githubusercontent.com/rescript-lang/rescript-compiler/master/docs/docson/build-schema.json",
   "name": "@packages/rescript-bindings",
-  "namespace": false,
+  "namespace": true,
   "reason": { "react-jsx": 3 },
   "refmt": 3,
   "bs-dependencies": [
